# eyefm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: debug.yaml  eyemae_cnn_512_12l.yaml  eyemae_cnn_512_12l_fast_cache44_nooffset.yaml  eyemae_cnn_512_12l_speed_cache44.yaml  eyemae_cnn_512_12l_speed_cache44_nooffset.yaml  eyemae_cnn_512_12l_speed_cache44_nooffset_prefetch4.yaml  eyemae_cnn_512_12l_speed_tokens90k_prefetch4.yaml
docs/: README.md  current_goal_guardrail.md  downstream_v3_plan.md  eyemae_baseline.md  eyemae_codex_plan_engineered_clean.md  eyemae_downstream_epoch_dynamics.md  eyemae_downstream_finetune_codex_plan.md  eyemae_experiment_registry.md  eyemae_fast_dataset_v2_current.md  eyemae_fast_dataset_v2_report.md  eyemae_fast_packed_dataset_adaptation_plan.md  eyemae_training_audit_codex_plan.md  newdata_v3_current_dataset_audit_20260621.md  newdata_v3_downstream_identity_audit.md  newdata_v3_exception_log.md  newdata_v3_implementation_changes.md  newdata_v3_mci_label_audit.md  newdata_v3_old_baseline_audit_20260621.md  newdata_v3_plan_conformance_check.md  newdata_v3_training_log.md  pretrain_v3_plan.md
outputs/: area_stats_subject_heldout_seed42.json  debug_area_stats.json
scripts/: audit_downstream_v3_goal.py  build_eyemae_fast_dataset_v2.py  eval_downstream_all.sh  finetune_downstream_all.sh  finetune_downstream_kfold.sh  finetune_downstream_kfold_pd_addiction.sh  finetune_downstream_kfold_wait_gpu.sh  fix_materialized_v2_subject_ids.py  lock_downstream_v3_within30_checkpoints.py  make_downstream_splits.sh  run_codex_goal_tmux.sh  (+19 more)
(+438 files in other folders)
