[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyemae"
version = "0.1.0"
description = "Task-conditioned EyeMAE pretraining for eye movement trials"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
  "torch",
  "matplotlib",
  "tensorboard",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

